--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.617.0",
+    "@aws-sdk/client-transcribe": "^3.620.1",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
