--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.617.0",
     "@aws-sdk/client-transcribe": "^3.620.1",
+    "@ffmpeg/ffmpeg": "^0.12.6",
+    "@ffmpeg/util": "^0.12.1",
     "axios": "^1.7.2",
+    "captions-generator": "file:",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
